--- a/terms.html
+++ b/terms.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="icon" href="gambling_favicon.png" type="image/png" />
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -64,12 +65,16 @@
   <main>
     <h1>Important stuff</h1>
     <p>
-      Yk, like legal shit, Tos & privacy police
+      Below you will find Chippy's "Terms of Service" & our Privacy Policy.
     </p>
     <h2>Terms of Service</h2>
-    <p>Terms of this service, very big! Mmm IMPORTANT</p>
+    <p>
+    Terms of this service, very big! Mmm IMPORTANT
+    </p>
     <h2>Privacy Policy</h2>
-    <p>Definitely does NOT sell your data to china</p>
+    <p>
+    Definitely does NOT sell your data to china
+    </p>
   </main>
   <footer style="
   position: fixed;
