--- a/terms.html
+++ b/terms.html
@@ -16,7 +16,7 @@
     header 
     {
       background: url('gambling_banner.png') no-repeat center center/cover;
-      height: 300px;
+      height: 370px;
       border: 7px solid #181830;
       display: flex;
       align-items: center;
@@ -60,7 +60,7 @@
 </head>
 <body>
   <header>
-    <img src="gambling_pfp.png" alt="Chippy Profile Picture" />
+    <img src="tos_pic.png" alt="ToS Picture" />
   </header>
   <main>
     <h1>Important stuff</h1>
