Wrote ToS & privacy policy

--- a/terms.html
+++ b/terms.html
@@ -68,12 +68,39 @@
       Below you will find Chippy's "Terms of Service" & our Privacy Policy.
     </p>
     <h2>Terms of Service</h2>
-    <p>
-    Terms of this service, very big! Mmm IMPORTANT
+    <blockquote style="margin-left: 20px; font-style: italic;">
+      <ol>
+        <li>These terms and conditions apply to each and every user of Chippy.      </li>
+        <li>By adding Chippy to your server or account, you agree to them.          </li>
+        <li>Failure to abide will result in punishment, possibly exclusion of use.  </li>
+      </ol>
+    </blockquote>
+    <p style="white-space: nowrap; text-align: left; margin-left: -30px;">
+        Chippy shall not be used to harass, exclude, bully or otherwise treat users of Discord in a bad way <br>
+        Intentional command spam or attempts to crash the bot shall not be made and will be severely punished. <br>
+        Chippy shall not be used in Bot spam servers which cause command spam. <br>
+        The owner of the account is responsible for any violation caused by them, no matter if it was compromised or not. <br>
+        The owner of the server is responsible for any violation made in it. <br>
+    </p>
+    <p style="text-align: center;">
+        The owner of this application ("Chippy") reserves the right to prohibit any server or user from using it. <br>
+        The owner of this application ("Chippy") reserves the right to update this page & therefore ToS/Privacy Policyat any point in time with a notice <br>
     </p>
     <h2>Privacy Policy</h2>
-    <p>
-    Definitely does NOT sell your data to china
+    <h3>The following data is collected & stored:</h3>
+    <blockquote style="margin-left: 20px; font-style: italic;">
+      <ol> - your Discord User ID </ol>
+    </blockquote>
+    <h3>Usage of your data:</h3>
+     <p style="text-align: center;">
+      The bot uses stored data, as defined above, <br>
+      to provide a great experience for all users and enable our features. <br>
+      Your data is <b>not</b> shared with any third-parties
+    </p>
+    <h3>Removal of your data:</h3>
+    <p style="text-align: center;">
+      Your Data will be removed if you end up banned from using this bot. <br>
+      If you wish to manually remove your data please contact me! <br><br><br>
     </p>
   </main>
   <footer style="
