added three breaks after game list, just to be sure

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <h2>Current games: (beta, list will grow!)</h2>
       <ul style="text-align: left; list-style: square;">
       <li>Seventeen + Four – A Blackjack-inspired card game</li>
-      <li>High or Low      – Can you predict the next card?</li>
+      <li>High or Low      – Can you predict the next card?</li> <br><br><br>
     </ul>
     </section>
   </main>
