--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
         Terms of Service & Privacy Policy
       </a>
     </div>
+    <div>
+      <a href="https://github.com/LazyGran/chippy_site" style="color: #aaaaaa; text-decoration: none;">
+        Website's Github repository
+      </a>
+    </div>
     <div style="font-style: italic;">
       The house always wins… eventually.
     </div>
