Added link for website's github repo

--- a/terms.html
+++ b/terms.html
@@ -123,6 +123,11 @@
         Home
       </a>
     </div>
+    <div>
+      <a href="https://github.com/LazyGran/chippy_site" style="color: #aaaaaa; text-decoration: none;">
+        Website's Github repository
+      </a>
+    </div>
     <div style="font-style: italic;">
       Not rigged! Probably...
     </div>
