Added servers with chippys (featured servers will be embedded there) Added roulette as a listed game

--- a/index.html
+++ b/index.html
@@ -85,10 +85,18 @@
    <section style="margin-top: 40px;">
       <h2>Current games: (beta, list will grow!)</h2>
       <ul style="text-align: left; list-style: square;">
-      <li>Seventeen + Four – A Blackjack-inspired card game</li>
-      <li>High or Low      – Can you predict the next card?</li> <br><br><br>
-    </ul>
+        <li>Seventeen & Four – A Blackjack-style card game</li>
+        <li>High or Low      – Can you predict the next card?</li>
+        <li>Roulette         – Classic, can't go wrong with that!</li>
+      </ul> <br><br>
     </section>
+
+    Servers with Chippy:<br>
+    <iframe 
+      src="https://discord.com/widget?id=868275733850652732&theme=dark" 
+      width="350" height="500" allowtransparency="true" frameborder="0" 
+      sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
+    </iframe> <br><br><br><br><br>
   </main>
 <footer style="
   position: fixed;
