games are now a table & properly position

--- a/index.html
+++ b/index.html
@@ -84,14 +84,23 @@
    </p>
    <section style="margin-top: 40px;">
       <h2>Current games: (beta, list will grow!)</h2>
-      <ul style="text-align: left; list-style: square;">
-        <li>Seventeen & Four – A Blackjack-style card game</li>
-        <li>High or Low      – Can you predict the next card?</li>
-        <li>Roulette         – Classic, can't go wrong with that!</li>
-      </ul> <br><br>
+      <table style="text-align: left; margin: 0 auto;">
+        <tr>
+          <td> Seventeen & Four </td>
+          <td> A Blackjack-style card game</td>
+        </tr>
+        <tr>
+          <td> High or Low</td>
+          <td> Can you predict the next card?</td>
+        </tr>
+        <tr>
+          <td> Roulette </td>
+          <td> A casino classic!</td>
+        </tr>
+      </table>
     </section>
 
-    Servers with Chippy:<br>
+    <br><br><b>Servers with Chippy:<br>
     <iframe 
       src="https://discord.com/widget?id=868275733850652732&theme=dark" 
       width="350" height="500" allowtransparency="true" frameborder="0" 
