improved table formatting

--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
       <table style="text-align: left; margin: 0 auto;">
         <tr>
           <td> Seventeen & Four </td>
-          <td> A Blackjack-style card game</td>
+          <td>- A Blackjack-style card game</td>
         </tr>
         <tr>
           <td> High or Low</td>
-          <td> Can you predict the next card?</td>
+          <td>- Can you predict the next card?</td>
         </tr>
         <tr>
           <td> Roulette </td>
-          <td> A casino classic!</td>
+          <td>- A casino classic!</td>
         </tr>
       </table>
     </section>
