"servers with chippy" is now a table That way, future servers can be easily added & they will be next to each other, instead of below

--- a/index.html
+++ b/index.html
@@ -101,11 +101,19 @@
     </section>
 
     <br><br><b>Servers with Chippy:<br>
-    <iframe 
-      src="https://discord.com/widget?id=868275733850652732&theme=dark" 
-      width="350" height="500" allowtransparency="true" frameborder="0" 
-      sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
-    </iframe> <br><br><br><br><br>
+    <table style="margin: 0 auto">
+      <tr>
+        <td>    
+          <iframe 
+            src="https://discord.com/widget?id=868275733850652732&theme=dark" 
+            width="350" height="500" allowtransparency="true" frameborder="0" 
+            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
+          </iframe> 
+        </td>
+      </tr>
+  </table>
+
+  <br><br><br><br><br>
   </main>
 <footer style="
   position: fixed;
