Added new games to list

--- a/index.html
+++ b/index.html
@@ -86,20 +86,27 @@
       <h2>Current games: (beta, list will grow!)</h2>
       <table style="text-align: left; margin: 0 auto;">
         <tr>
+          <td> Blackjack </td>
+          <td>- A casino classic!</td>
+        </tr>
+        <tr>
           <td> Seventeen & Four </td>
-          <td>- A Blackjack-style card game</td>
+          <td>- Blackjack, but different.</td>
         </tr>
         <tr>
           <td> High or Low</td>
-          <td>- Can you predict the next card?</td>
+          <td>- Which one will it be?</td>
         </tr>
         <tr>
           <td> Roulette </td>
-          <td>- A casino classic!</td>
+          <td>- Where will the ball land?</td>
+        </tr>
+        <tr>
+          <td> Horse races </td>
+          <td>- Who wins? Who loses?!</td>
         </tr>
       </table>
     </section>
-
     <br><br><b>Servers with Chippy:<br>
     <table style="margin: 0 auto">
       <tr>
