Changed "Servers with Chippy" to just recommend a single server

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </tr>
       </table>
     </section>
-    <br><br><b>Servers with Chippy:<br>
+    <br><br><b>Chippy's favorite server:<br>
     <table style="margin: 0 auto">
       <tr>
         <td>    
