--- a/index.html
+++ b/index.html
@@ -94,13 +94,12 @@
   <main>
     <h1>Welcome to Chippy</h1>
     <p>
-      The legal, the illegal & the in-between <br>
-      Chippy is a playful & fun oriented Discord bot. <br><br>
+      Best games, Best community <3 <br><br>
        
       <a href="https://discord.com/oauth2/authorize?client_id=1373621336982949992">Add Chippy</a> <a href="https://github.com/LazyGran/gambling">Github repository</a>
    </p>
    <section style="margin-top: 40px;">
-      <h2>Current games: (beta, list will grow!)</h2>
+      <h2>Current games: (list will grow!)</h2>
       <table style="text-align: left; margin: 0 auto;">
         <tr>
           <td> Blackjack </td>
@@ -122,6 +121,14 @@
           <td> Horse races </td>
           <td>- Who wins? Who loses?!</td>
         </tr>
+        <tr>
+          <td> Racer </td>
+          <td>- A nice Arcade, for easy money</td>
+        </tr>
+        <tr>
+          <td> Slots </td>
+          <td>- Surely you'll hit the Jackpot</td>
+        </tr>
       </table>
     </section>
     <br><br><b>Chippy's favorite server:<br>
@@ -136,6 +143,37 @@
         </td>
       </tr>
   </table>
+  <b><b><b><h2>Special thanks to:</h2>
+    <table style="text-align: left; margin: 0 auto; font-style: normal;">
+      <tr>
+        <td>Damka</td><td>@damka_.</td>
+      </tr>
+      <tr>
+        <td>Via</td><td>@shibahri</td>
+      </tr>
+      <tr>
+        <td>Nano</td><td>@nanoytgaming</td>
+      </tr>
+      <tr>
+        <td>Ford</td><td>@ryzaaah</td>
+      </tr>
+      <tr>
+        <td>Testermann</td><td>@testermann</td>
+      </tr>
+      <tr>
+        <td>Tutel</td><td>@tutelthunder</td>
+      </tr>
+      <tr>
+        <td>Jesse Duckmen</td><td>@duckwiththehat</td>
+      </tr>
+      <tr>
+        <td>Blue</td><td>@mr.guntn</td>
+      </tr>
+      <tr>
+        <td>Giggle</td><td>@xnamiico</td>
+      </tr>
+  </table>
+  And a BIG thank you to everyone who was part of the beta <3
 
   <br><br><br><br><br>
   </main>
