Added new users to "Special Thanks" list

--- a/index.html
+++ b/index.html
@@ -172,6 +172,18 @@
       <tr>
         <td>Giggle</td><td>@xnamiico</td>
       </tr>
+        <tr>
+        <td>Ray</td><td>@rayzzy</td>
+      </tr>
+      <tr>
+        <td>Neigh</td><td>@neigh</td>
+      </tr>
+      <tr>
+        <td>Pesto</td><td>@p.e.s.t</td>
+      </tr>
+      <tr>
+        <td>Roebuck</td><td>@roebuck34</td>
+      </tr>
   </table>
   And a BIG thank you to everyone who was part of the beta <3
 
