--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
           <td> Slots </td>
           <td>- Surely you'll hit the Jackpot</td>
         </tr>
+        <tr>
+          <td> Poker </td>
+          <td>- Casino Hold'em rules, never fold.</td>
+        </tr>
+        <tr>
+          <td> Card Rush </td>
+          <td>- Creative, Unique, Impossible to lose</td>
+        </tr>
       </table>
     </section>
     <br><br><b>Chippy's favorite server:<br>
