Added donations via Ko-fi

--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
       Best games, Best community <3 <br><br>
        
       <a href="https://discord.com/oauth2/authorize?client_id=1373621336982949992">Add Chippy</a> <a href="https://github.com/LazyGran/gambling">Github repository</a>
+
+      <br><br>
+      <b>Donations:</b>
+      <br><br>
+      <a href="https://ko-fi.com/xgraron" target="_blank">
+      <img src="https://ko-fi.com/img/githubbutton_sm.svg" alt="Donate with Ko-fi">
+</a>
    </p>
    <section style="margin-top: 40px;">
       <h2>Current games: (list will grow!)</h2>
