--- a/index.html
+++ b/index.html
@@ -85,6 +85,54 @@
       box-sizing: border-box;
       font-weight: bold;
     }
+    .popup-overlay {
+      display: none;                 
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.6);
+      z-index: 9999;
+      justify-content: center;
+      align-items: center;
+      padding: 1rem;
+    }
+
+    .popup-content {
+      background: #fff;
+      color: #111;
+      padding: 1rem;
+      max-width: 800px;
+      width: 100%;
+      border-radius: 10px;
+      position: relative;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.5);
+    }
+
+    .popup-content h2 {
+      margin-top: 0;
+      font-size: 1.2rem;
+    }
+
+    .popup-close {
+      position: absolute;
+      top: 8px;
+      right: 12px;
+      font-size: 1.2rem;
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #444;
+    }
+
+    .popup-content iframe {
+      width: 100%;
+      height: 520px;
+      border: none;
+    }
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+    }
   </style>
 </head>
 <body>
@@ -103,7 +151,6 @@
       <a href="#" onclick="openKofiPopup(); return false;">
         <img src="https://ko-fi.com/img/githubbutton_sm.svg" alt="Donate with Ko-fi" />
       </a>
-</a>
    </p>
    <section style="margin-top: 40px;">
       <h2>Current games: (list will grow!)</h2>
@@ -219,6 +266,15 @@
     The House always wins... eventually.
   </div>
 </footer>
+
+<div class="popup-overlay" id="feedbackPopup" aria-hidden="true">
+  <div class="popup-content" role="dialog" aria-modal="true" aria-labelledby="feedbackTitle">
+    <button class="popup-close" onclick="closePopup()" aria-label="Close feedback form">✖</button>
+    <h2 id="feedbackTitle">Optional feedback form regarding Chippy</h2>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScdB8mEO0DbISzn2hW2YhE6CDhp236a16noZvZtE6cos6ku4A/viewform?embedded=true" width="640" height="4533" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  </div>
+</div>
+
 <script>
   function openKofiPopup() 
   {
@@ -234,6 +290,22 @@
       `width=${width},height=${height},top=${top},left=${left},resizable=yes,scrollbars=yes`
     );
   }
+
+  function openPopup() 
+  {
+    const popup = document.getElementById("feedbackPopup");
+    popup.style.display = "flex";
+    popup.setAttribute("aria-hidden", "false");
+    document.body.style.overflow = "hidden"; 
+  }
+  function closePopup() 
+  {
+    const popup = document.getElementById("feedbackPopup");
+    popup.style.display = "none";
+    popup.setAttribute("aria-hidden", "true");
+    document.body.style.overflow = "";
+  }
+  window.addEventListener("load", openPopup);
 </script>
 </body>
 </html>
