--- a/blackjack.html
+++ b/blackjack.html
@@ -189,7 +189,108 @@
   </div>
 </footer>
 <script>
-  //script
+
+  var deck = [ "Aceh", "Aces", "Aced", "Acec", "2h", "2s", "2d", "2c", "3h", "3s", "3d", "3c", "4h", "4s", "4d", "4c", "5h", "5s", "5d", "5c", "6h", "6s", "6d", "6c", "7h", "7s", "7d", "7c", "8h", "8s", "8d", "8c", "9h", "9s", "9d", "9c", "10h", "10s", "10d", "10c", "Jackh", "Jacks", "Jackd", "Jackc", "Queenh", "Queens", "Queend", "Queenc", "Kingh", "Kings", "Kingd", "Kingc" ]
+
+  var turn = true
+
+  const cards =
+  {
+      "Aceh": "Ace",
+      "Aces": "Ace",
+      "Aced": "Ace",
+      "Acec": "Ace",
+      "2h": 2,
+      "2s": 2,
+      "2d": 2,
+      "2c": 2,
+      "3h": 3,
+      "3s": 3,
+      "3d": 3,
+      "3c": 3,
+      "4h": 4,
+      "4s": 4,
+      "4d": 4,
+      "4c": 4,
+      "5h": 5,
+      "5s": 5,
+      "5d": 5,
+      "5c": 5,
+      "6h": 6,
+      "6s": 6,
+      "6d": 6,
+      "6c": 6,
+      "7h": 7,
+      "7s": 7,
+      "7d": 7,
+      "7c": 7,
+      "8h": 8,
+      "8s": 8,
+      "8d": 8,
+      "8c": 8,
+      "9h": 9,
+      "9s": 9,
+      "9d": 9,
+      "9c": 9,
+      "10h": 10,
+      "10s": 10,
+      "10d": 10,
+      "10c": 10,
+      "Jackh": "Jack",
+      "Jacks": "Jack",
+      "Jackd": "Jack",
+      "Jackc": "Jack",
+      "Queenh": "Queen",
+      "Queens": "Queen",
+      "Queend": "Queen",
+      "Queenc": "Queen",
+      "Kingh": "King",
+      "Kings": "King",
+      "Kingd": "King",
+      "Kingc": "King"
+  }
+
+  function add(cID, name)
+  {
+    const container = document.getElementById(cID)
+    const image     = document.createElement("img")
+
+    image.src       = `cards/${name}.png`
+    image.className = "card"
+
+    container.appendChild(image)
+
+    setTimeout(() => 
+    {
+      image.classList.add("show")
+    }, 50)
+  }
+
+  function stand()
+  {
+    turn = false
+
+    for(let i = 1; i < 5; i++)
+    {
+      const card = Math.floor(Math.random() * deck.length)
+
+      add("dealer_hand", deck[card])
+
+      deck.splice(card, 1)
+    }
+  }
+
+  function hit()
+  {
+    if(turn)
+    {
+      const card = Math.floor(Math.random() * (deck.length - 1))
+
+      add("hand", deck[card])
+
+      deck.splice(card, 1)
+    }
+  }
 </script>
 </body>
 </html>
