--- a/blackjack.html
+++ b/blackjack.html
@@ -347,11 +347,39 @@
   {
     if(stand_enabled)
     {
+      stand_enabled = false 
+
       for(let i = 1; i < 5; i++)
       {
         while(dealer_points < 17)
         {
           dealer_points = await dealer_draw(dealer_hand, dealer_points)
+        }
+
+        if(busted)
+        {
+          //player bust
+          console.log("bust")
+        }
+        else if(dealer_points > 21)
+        {
+          //dealer bust
+          console.log("win1")
+        }
+        else if(points > dealer_points)
+        {
+          //player win
+          console.log("win2")
+        }
+        else if(points === dealer_points)
+        {
+          //push
+          console.log("push")
+        }
+        else
+        {
+          //lost
+          console.log("lost")
         }
       }   
     }
@@ -362,6 +390,14 @@
     if(hit_enabled)
     {
       points = await player_draw(hand, points)
+
+      if(points > 21)           
+      {
+        hit_enabled   = false
+        busted        = true
+
+        stand()
+      }
     }
   }
 </script>
