--- a/blackjack.html
+++ b/blackjack.html
@@ -88,8 +88,12 @@
     .card 
     {
       vertical-align: bottom;
-      width: 80px;
-      height: 90px;
+      min-width: 40;
+      width: 20vw;
+      max-width: 80px;
+      height: 24vw;
+      min-height: 45px;
+      max-height: 90px; 
       border-radius: 8px;
       filter: drop-shadow(0 4px 16px rgba(0,0,0,1));
       position: relative;
@@ -128,8 +132,12 @@
       background-color: #4ea1d3;
       color: white;
       border: none;
-      width: 100px;
-      height: 50px;
+      min-width: 50px;
+      width: 24vw;
+      max-width: 100px;
+      min-height: 25;
+      height: 12vw;
+      max-height: 50px;
       margin: 0 10px;
       border-radius: 8px;
       font-size: 1em;
