--- a/blackjack.html
+++ b/blackjack.html
@@ -17,6 +17,9 @@
     {
       background: url('gambling_banner.png') no-repeat center center/cover;
       height: 370px;
+      min-height: 100;
+      height: 30vw;
+      max-height: 300px;
       border: 7px solid #181830;
       display: flex;
       align-items: center;
@@ -25,8 +28,10 @@
     }
     header img 
     {
-      width: 230px;
-      height: 230px;
+      min-width: 110px;
+      width: 15vw;
+      max-width: 220px;
+      aspect-ratio: 1 / 1;
       border-radius: 50%;
       border: 7px solid #181830;
       position: absolute;
@@ -161,6 +166,7 @@
     <p>
       Dealer stands on soft 17 and higher<br>
     </p>
+    <h1 id="state" style="font-size: 1.5em"></h2>
     <div id="blackjack-game" style="text-align:center; margin-top: 50px;">
       <div style="margin-top: 20px;">
         <a href="#" onclick="hit(); return false;">
@@ -368,31 +374,32 @@
       }
 
       console.log(points, dealer_points)
+      const state = document.getElementById("state");
 
       if(busted)
       {
         //player bust
-        console.log("bust")
+        state.innerHTML = `<span style="color: red">Bust!</span> You went over 21.`
       }
       else if(dealer_points > 21)
       {
         //dealer bust
-        console.log("win1")
+        state.innerHTML = `<span style="color: green">Win!</span> The dealer went over 21.`
       }
       else if(points > dealer_points)
       {
         //player win
-        console.log("win2")
+        state.innerHTML = `<span style="color: green">Win!</span> You have more points.`
       }
       else if(points === dealer_points)
       {
         //push
-        console.log("push")
+        state.innerHTML = `<span style="color: yellow">Push!</span> You & the Dealer have the same points.`
       }
       else
       {
         //lost
-        console.log("lost")
+        state.innerHTML = `<span style="color: red">Lost!</span> The Dealer has more points.`
       }
 
       document.getElementById("b_restart").style.display  = "inline-block"
@@ -457,6 +464,8 @@
 
     setTimeout(() =>
     {
+      state.innerHTML = "";
+
       document.getElementById("b_restart").style.display  = "none"
       document.getElementById("b_hit").style.display      = "inline-block"
       document.getElementById("b_stand").style.display    = "inline-block"
