--- a/terms.html
+++ b/terms.html
@@ -17,6 +17,9 @@
     {
       background: url('gambling_banner.png') no-repeat center center/cover;
       height: 370px;
+      min-height: 100;
+      height: 30vw;
+      max-height: 300px;
       border: 7px solid #181830;
       display: flex;
       align-items: center;
@@ -25,8 +28,10 @@
     }
     header img 
     {
-      width: 230px;
-      height: 230px;
+      min-width: 110px;
+      width: 15vw;
+      max-width: 220px;
+      aspect-ratio: 1 / 1;
       border-radius: 50%;
       border: 7px solid #181830;
       position: absolute;
