--- a/blackjack.html
+++ b/blackjack.html
@@ -16,9 +16,8 @@
     header 
     {
       background: url('games_banner.png') no-repeat center center/cover;
-      height: 370px;
-      min-height: 100;
-      height: 30vw;https://github.com/LazyGran/gambling/issues
+      min-height: 100px;
+      height: 30vw;
       max-height: 300px;
       border: 7px solid #181830;
       display: flex;
@@ -26,13 +25,13 @@
       justify-content: center;
       position: relative;
       color: #bfbfbf;
-      size: 10vw;
+      font-size: 5vw;
       font-family: Arial, sans-serif;
     }
     main 
     {
       max-width: 600px;
-      margin: auto 0;
+      margin: 0 auto;
       padding: 0 20px;
       text-align: center;
     }
@@ -286,9 +285,6 @@
     {
       points          = await player_draw(hand, points)
       dealer_points   = await dealer_draw(dealer_hand, dealer_points)
-
-      console.log(points)
-      console.log(dealer_points)
     }
   } 
 
@@ -338,10 +334,6 @@
       total -= 10
       aces --
     }
-
-    console.log(hand)
-    console.log(total)
-    console.log("-----------------")
 
     if(who === "player")  hp.innerHTML = `Your hand <span style="color: grey">(${total})</span>`
     else                  dp.innerHTML = `Dealer's hand <span style="color: grey">(${total})</span>`
